--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1198,10 +1198,12 @@ button {
     align-items: center;
     justify-content: center;
     gap: 4rem;
+    width: 100%;
   }
 
   .header_slide1-text h1 {
-    width: 100%;
+    text-align: center;
+    font-size: 50px;
   }
 
   .header_slide2 {
@@ -1210,14 +1212,20 @@ button {
     flex-direction: column;
   }
 
+  .header_slide2 h1 {
+    font-size: 50px;
+  }
+
+
+
   .header_slide2-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0rem;
-    margin-top: 4rem;
-    margin-bottom: 3rem;
+    margin-top: 5rem;
+    margin-bottom: 8rem;
   }
 
   .header_slide2-button {
@@ -1247,6 +1255,10 @@ button {
 
   }
 
+  .about_container h2 {
+    font-size: 50px;
+  }
+
   /* Tailoring Section */
 
   .tailoring_container {
@@ -1255,7 +1267,7 @@ button {
   }
 
   .tailoring_container h2 {
-    font-size: 60px;
+    font-size: 50px;
     opacity: 1;
     color: var(--color-black) !important;
     padding: 2rem;
@@ -1304,6 +1316,10 @@ button {
     padding: 5rem 0;
   }
 
+  .products_container h1 {
+    font-size: 50px;
+  }
+
   .products_container img {
     height: 400px;
     border-radius: 30px;
@@ -1342,6 +1358,10 @@ button {
     flex-direction: column;
 
     padding: 10rem 0;
+  }
+
+  .suits_container h1 {
+    font-size: 50px;
   }
 
   .suits_top-container {
