--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1449,14 +1449,14 @@ button {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: var(--color-grey);
+    background-color: var(--color-black);
     padding-bottom: 10rem;
     margin-top: -1px;
   }
 
   .line {
     padding: 10rem;
-    background-color: var(--color-grey);
+    background-color: var(--color-black);
   }
 
   .line hr {
@@ -1476,7 +1476,7 @@ button {
   .contact_brand-container h1 {
     font-weight: normal;
     font-size: 32px;
-    color: var(--color-black);
+    color: var(--color-grey);
   }
 
   .contact_links-container ul {
@@ -1491,7 +1491,7 @@ button {
   .contact_links-container a {
     text-decoration: none;
     font-size: 20px;
-    color: var(--color-black);
+    color: var(--color-grey);
     transition: 1s;
     cursor: pointer;
   }
@@ -1503,7 +1503,7 @@ button {
   }
 
   .icon {
-    color: var(--color-black);
+    color: var(--color-grey);
     font-size: 40px;
     margin-top: 2rem;
     transition: 1s;
